--- a/public/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.escaped.html
+++ b/public/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.escaped.html
@@ -231,8 +231,16 @@
       &lt;div class=&quot;g-2up&quot;&gt;
         &lt;div class=&quot;gi&quot;&gt;
           &lt;div class=&quot;content-item large&quot;&gt;
+            &lt;div class=&quot;status&quot;&gt;
+              Tila: &lt;span class=&quot;state&quot;&gt;K&Atilde;&curren;ynniss&Atilde;&curren;&lt;/span&gt;
+            &lt;/div&gt;
+            &lt;div class=&quot;gantt-title&quot;&gt;
+              Aikataulu: &lt;span class=&quot;date&quot;&gt;23.10.2012&acirc;€“31.12.2014&lt;/span&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
+          &lt;div class=&quot;content-item large&quot;&gt;
             &lt;div class=&quot;fadeout&quot;&gt;
-              &lt;p class=&quot;ingressi&quot;&gt;Hankkeen kuvausteksti t&Atilde;&curren;nne. Lorem ipsum dolor sit amet, consectetur adipiscing elit. &lt;/p&gt;
+              &lt;p class=&quot;ingressi&quot;&gt;Hankkeen kuvausteksti t&Atilde;&curren;nne. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget elementum nibh. Nunc in tortor vel velit feugiat dictum nec pharetra erat. In eget molestie velit. Suspendisse tincidunt pharetra lorem, non pharetra orci porta vel. Proin adipiscing, lacus sed euismod posuere, felis nunc varius nisi, eu volutpat mi odio a mi. Nullam vel tellus tincidunt, tristique sem sed, ullamcorper mi. Suspendisse potenti. Pellentesque tristique libero eget mollis congue. Pellentesque porta facilisis lobortis. Ut sit amet lorem eros. Cras rutrum metus quis condimentum egestas. Pellentesque iaculis turpis purus, a elementum diam convallis non. In nulla purus, ultrices quis turpis in, facilisis ultrices est. Pellentesque eu justo lobortis ligula sagittis tristique. Sed varius massa sed lectus tempus, sed eleifend ligula tincidunt. Curabitur aliquam porta enim, at bibendum arcu elementum nec.&lt;/p&gt;
               &lt;p class=&quot;read-more&quot;&gt;
                 &lt;a href=&quot;&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
               &lt;/p&gt;
@@ -248,6 +256,8 @@
               &lt;/a&gt;
             &lt;/div&gt;
           &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;div class=&quot;gi&quot;&gt;
           &lt;div class=&quot;content-item large invitation&quot;&gt;
             &lt;h3&gt;
               &lt;img src=&quot;../../images/favicon_32x32.jpg&quot; /&gt;Kutsu muita osallistumaan
@@ -266,78 +276,79 @@
             &lt;div class=&quot;sidebar-form-errors&quot;&gt;
             &lt;/div&gt;
           &lt;/div&gt;
+        &lt;/div&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+    
+    &lt;div class=&quot;content-item large&quot;&gt;
+      &lt;div id=&quot;showParticipations&quot; class=&quot;content-item large participations responsive-list-block&quot;&gt;
+        &lt;h2 class=&quot;ongoing&quot;&gt;
+          Menossa olevat osallistumiset
+        &lt;/h2&gt;
+        &lt;div class=&quot;lift-button gray-base participation inline-element&quot;&gt;
+          &lt;div class=&quot;count-container&quot;&gt;
+            &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
+            &lt;a href=&quot;//www.foo.bar&quot;&gt;17&lt;/a&gt;
+          &lt;/div&gt;
+          &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Ymp&Atilde;&curren;rist&Atilde;&para;n hyvinvointi - miten sit&Atilde;&curren; voidaan...&lt;/a&gt;
+          &lt;span class=&quot;date&quot;&gt;26.5. asti&lt;/span&gt;
+        &lt;/div&gt;
+        &lt;div class=&quot;lift-button gray-base participation inline-element&quot;&gt;
+          &lt;div class=&quot;count-container&quot;&gt;
+            &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
+            &lt;a href=&quot;//www.foo.bar&quot;&gt;24&lt;/a&gt;
+          &lt;/div&gt;
+          &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Kaupungin asukkaiden hyvinvointi ja osallistu...&lt;/a&gt;
+          &lt;span class=&quot;date&quot;&gt;26.5. asti&lt;/span&gt;
+        &lt;/div&gt;
+        &lt;div class=&quot;lift-button gray-base participation inline-element&quot;&gt;
+          &lt;div class=&quot;count-container&quot;&gt;
+            &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
+            &lt;a href=&quot;//www.foo.bar&quot;&gt;17&lt;/a&gt;
+          &lt;/div&gt;
+          &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Miten nyt ker&Atilde;&curren;tt&Atilde;&curren;v&Atilde;&curren; rahoitus tulisi sijoittaa?&lt;/a&gt;
+          &lt;span class=&quot;date&quot;&gt;26.5. asti&lt;/span&gt;
+        &lt;/div&gt;
+        &lt;div id=&quot;btnAddParticipationContainer&quot; class=&quot;lift-button gray-base is-hidden inline-element&quot;&gt;
+          &lt;div class=&quot;add-icon-container&quot;&gt;
+            &lt;span class=&quot;icon-span icon-add&quot;&gt;&lt;/span&gt;
+            &lt;a id=&quot;btnAddParticipation&quot;&gt;Luo uusi osallistuminen&lt;/a&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;
+      &lt;/div&gt;
+      &lt;div id=&quot;addParticipations&quot; class=&quot;content-item large participations responsive-list-block inline-element&quot;&gt;
+        &lt;h2 class=&quot;create&quot;&gt;
+          Luo uusi osallistuminen
+        &lt;/h2&gt;
+        &lt;div class=&quot;lift-button gray-base participation inline-element&quot;&gt;
+          &lt;div class=&quot;add-icon-container&quot;&gt;
+            &lt;span class=&quot;icon-span icon-chat&quot;&gt;&lt;/span&gt;
+            &lt;a&gt;Luo reaaliaikainen keskustelu&lt;/a&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;div class=&quot;lift-button gray-base participation inline-element&quot;&gt;
+          &lt;div class=&quot;add-icon-container&quot;&gt;
+            &lt;span class=&quot;icon-span icon-forum&quot;&gt;&lt;/span&gt;
+            &lt;a&gt;Luo vapaamuotoinen keskustelu&lt;/a&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;div id=&quot;btnCancelParticipationContainer&quot; class=&quot;lift-button gray-base cancel is-hidden inline-element&quot;&gt;
+          &lt;div class=&quot;cancel-icon-container&quot;&gt;
+            &lt;span class=&quot;icon-span icon-cancel&quot;&gt;&lt;/span&gt;
+            &lt;a id=&quot;btnCancelParticipation&quot;&gt;Palaa osallistumislistaan&lt;/a&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div class=&quot;g&quot;&gt;
+      &lt;div class=&quot;g-2up&quot;&gt;
+        &lt;div class=&quot;gi&quot;&gt;
           &lt;div class=&quot;content-item large fadeout&quot;&gt;
-            &lt;div class=&quot;status&quot;&gt;
-              Tila: &lt;span class=&quot;state&quot;&gt;K&Atilde;&curren;ynniss&Atilde;&curren;&lt;/span&gt;
-            &lt;/div&gt;
-            &lt;div class=&quot;gantt-title&quot;&gt;
-              Aikataulu: &lt;span class=&quot;date&quot;&gt;23.10.2012&acirc;€“31.12.2014&lt;/span&gt;
-            &lt;/div&gt;
             &lt;img id=&quot;chartHankeGantt&quot; src=&quot;../../images/fpo_square.png&quot; alt=&quot;Gantt-kuva&quot; /&gt;
             &lt;p class=&quot;read-more&quot;&gt;
               &lt;a href=&quot;&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
             &lt;/p&gt;
           &lt;/div&gt;
-          &lt;div id=&quot;showParticipations&quot; class=&quot;content-item large participations responsive-list-block&quot;&gt;
-            &lt;h2 class=&quot;ongoing&quot;&gt;
-              Menossa olevat osallistumiset
-            &lt;/h2&gt;
-            &lt;div class=&quot;lift-button gray-base participation inline-element&quot;&gt;
-              &lt;div class=&quot;count-container&quot;&gt;
-                &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
-                &lt;a href=&quot;//www.foo.bar&quot;&gt;17&lt;/a&gt;
-              &lt;/div&gt;
-              &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Ymp&Atilde;&curren;rist&Atilde;&para;n hyvinvointi - miten sit&Atilde;&curren; voidaan...&lt;/a&gt;
-              &lt;span class=&quot;date&quot;&gt;26.5. asti&lt;/span&gt;
-            &lt;/div&gt;
-            &lt;div class=&quot;lift-button gray-base participation inline-element&quot;&gt;
-              &lt;div class=&quot;count-container&quot;&gt;
-                &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
-                &lt;a href=&quot;//www.foo.bar&quot;&gt;24&lt;/a&gt;
-              &lt;/div&gt;
-              &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Kaupungin asukkaiden hyvinvointi ja osallistu...&lt;/a&gt;
-              &lt;span class=&quot;date&quot;&gt;26.5. asti&lt;/span&gt;
-            &lt;/div&gt;
-            &lt;div class=&quot;lift-button gray-base participation inline-element&quot;&gt;
-              &lt;div class=&quot;count-container&quot;&gt;
-                &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
-                &lt;a href=&quot;//www.foo.bar&quot;&gt;17&lt;/a&gt;
-              &lt;/div&gt;
-              &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Miten nyt ker&Atilde;&curren;tt&Atilde;&curren;v&Atilde;&curren; rahoitus tulisi sijoittaa?&lt;/a&gt;
-              &lt;span class=&quot;date&quot;&gt;26.5. asti&lt;/span&gt;
-            &lt;/div&gt;
-            &lt;div id=&quot;btnAddParticipationContainer&quot; class=&quot;lift-button gray-base is-hidden inline-element&quot;&gt;
-              &lt;div class=&quot;add-icon-container&quot;&gt;
-                &lt;span class=&quot;icon-span icon-add&quot;&gt;&lt;/span&gt;
-                &lt;a id=&quot;btnAddParticipation&quot;&gt;Luo uusi osallistuminen&lt;/a&gt;
-              &lt;/div&gt;
-            &lt;/div&gt;
-          &lt;/div&gt;
-          &lt;div id=&quot;addParticipations&quot; class=&quot;content-item large participations responsive-list-block inline-element&quot;&gt;
-            &lt;h2 class=&quot;create&quot;&gt;
-              Luo uusi osallistuminen
-            &lt;/h2&gt;
-            &lt;div class=&quot;lift-button gray-base participation inline-element&quot;&gt;
-              &lt;div class=&quot;add-icon-container&quot;&gt;
-                &lt;span class=&quot;icon-span icon-chat&quot;&gt;&lt;/span&gt;
-                &lt;a&gt;Luo reaaliaikainen keskustelu&lt;/a&gt;
-              &lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class=&quot;lift-button gray-base participation inline-element&quot;&gt;
-              &lt;div class=&quot;add-icon-container&quot;&gt;
-                &lt;span class=&quot;icon-span icon-forum&quot;&gt;&lt;/span&gt;
-                &lt;a&gt;Luo vapaamuotoinen keskustelu&lt;/a&gt;
-              &lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div id=&quot;btnCancelParticipationContainer&quot; class=&quot;lift-button gray-base cancel is-hidden inline-element&quot;&gt;
-              &lt;div class=&quot;cancel-icon-container&quot;&gt;
-                &lt;span class=&quot;icon-span icon-cancel&quot;&gt;&lt;/span&gt;
-                &lt;a id=&quot;btnCancelParticipation&quot;&gt;Palaa osallistumislistaan&lt;/a&gt;
-              &lt;/div&gt;
-            &lt;/div&gt;
-          &lt;/div&gt;
-        &lt;/div&gt;
-        &lt;div class=&quot;gi&quot;&gt;
           &lt;div class=&quot;content-item large participator-list&quot;&gt;
             &lt;div class=&quot;helper-container&quot;&gt;
               &lt;span class=&quot;icon-help h3&quot; title=&quot;Lorem ipsum&quot; placement=&quot;top&quot;&gt;Hankkeen osallistujat&lt;/span&gt;
@@ -450,6 +461,8 @@
               &lt;/p&gt;
             &lt;/div&gt;
           &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;div class=&quot;gi&quot;&gt;
           &lt;div class=&quot;content-item large hanke-info&quot;&gt;
             &lt;h2&gt;
               &lt;a id=&quot;Info&quot;&gt;
@@ -505,6 +518,17 @@
                 &lt;/tr&gt;
               &lt;/tbody&gt;
             &lt;/table&gt;
+          &lt;/div&gt;          
+          &lt;div class=&quot;content-item large project-analysis&quot;&gt;
+            &lt;h2&gt;
+              Yhteenveto
+            &lt;/h2&gt;
+            &lt;div class=&quot;fadeout&quot;&gt;
+              &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum velit sed nunc ultrices tincidunt. In nulla orci, lacinia at placerat non, consequat nec enim. Phasellus dignissim elit at porttitor elementum. Aliquam felis nisi, gravida sed augue at, posuere consectetur nunc. Nulla varius tempor massa sed luctus. Mauris ornare sollicitudin nulla, mollis convallis enim porta nec. Nulla non mauris eleifend, accumsan lectus id, ultrices massa. Etiam dictum ligula ac dui venenatis semper. Donec congue libero vitae neque dignissim pretium. Maecenas lacinia ultricies lorem, id vulputate turpis interdum a. Nulla ac orci elit. &lt;/p&gt;
+              &lt;p class=&quot;read-more&quot;&gt;
+                &lt;a href=&quot;&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
+              &lt;/p&gt;
+            &lt;/div&gt;
           &lt;/div&gt;
           &lt;div class=&quot;content-item large keywords&quot;&gt;
             &lt;div class=&quot;helper-container&quot;&gt;
@@ -530,17 +554,6 @@
               &lt;li&gt;Helsinki&lt;/li&gt;
               &lt;li&gt;Tampere&lt;/li&gt;
             &lt;/ul&gt;
-          &lt;/div&gt;
-          &lt;div class=&quot;content-item large project-analysis&quot;&gt;
-            &lt;h2&gt;
-              Yhteenveto
-            &lt;/h2&gt;
-            &lt;div class=&quot;fadeout&quot;&gt;
-              &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum velit sed nunc ultrices tincidunt. In nulla orci, lacinia at placerat non, consequat nec enim. Phasellus dignissim elit at porttitor elementum. Aliquam felis nisi, gravida sed augue at, posuere consectetur nunc. Nulla varius tempor massa sed luctus. Mauris ornare sollicitudin nulla, mollis convallis enim porta nec. Nulla non mauris eleifend, accumsan lectus id, ultrices massa. Etiam dictum ligula ac dui venenatis semper. Donec congue libero vitae neque dignissim pretium. Maecenas lacinia ultricies lorem, id vulputate turpis interdum a. Nulla ac orci elit. &lt;/p&gt;
-              &lt;p class=&quot;read-more&quot;&gt;
-                &lt;a href=&quot;&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
-              &lt;/p&gt;
-            &lt;/div&gt;
           &lt;/div&gt;
         &lt;/div&gt;
       &lt;/div&gt;
